--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,8 @@ img {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+body {
+    text-align: center; 
+    background-color: #E6E6FA; /* Lila rengi */
+    font-family: Arial, sans-serif; 
+}
